# msc-bioinformatyka-2022

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  index.html  skeletal.html
.github/: filters.yaml
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  ctest.yml  gh-pages.yml
assets/: bio.029842f4.wasm  bio.52f24554.wasm  bio.564aaf1d.wasm  bio.8566fb31.wasm  bio.959bae85.wasm  bio.962a699c.wasm  bio.a32f477c.wasm  bio.b4611dfc.wasm  bio.bc8670c0.wasm  bio.e22a6158.wasm  bio.fccc4cd0.wasm  index.0ce14808.js  index.2593f147.js  index.572d0d25.js  index.db18e7bd.js  index.deaf3fc9.css  index.ef199429.js  main.16be1234.js  main.31d0a2f2.js  main.365881ae.js  main.366f4a2c.js  main.54e8cd08.js  main.9b121971.js  main.9e4c1ba6.js  main.9edd43b9.js  main.b96e5129.css  main.c1751913.css  main.ce8efe8c.js  main.d9ebb6ea.js  main.de4ebdac.js  main.f53f5513.js  main.fac2970d.js
biolib/: CMakeLists.txt
biolib/include/bio/: amino_acid_arr.hh  example.hh  translate.hh
biolib/include/bio/skeletal/: amino_acid.hh  arqinine_spec.hh  bond.hh  cache.hh  defs.hh  draw_context.hh  histidine_spec.hh  phenylalanine_spec.hh  proline_spec.hh  side_chain.hh  side_chain_split.hh  skeletal.hh  svg_defs.hh  text.hh  text_placement.hh  text_style.hh  tryptophan_spec.hh  tyrosine_spec.hh  utils.hh
biolib/include/bio/skeletal/detail/: format.hh  radian.hh
biolib/src/: example.cc  skeletal.cc  skeletal_main.cc  translate.cc  visualize.cc
cmake/: Conan.cmake  Cotire.cmake  DoxygenAwesome.cmake
docs/: CMakeLists.txt  header.html
tests/: CMakeLists.txt
tests/biolib/: example.cc  translate.cc
tests/biolib/skeletal/: detail.cc
web/: .gitignore  CMakeLists.txt  cmake-autogen.config.ts.in  cmake-autogen.tsconfig.json.in  package-lock.json  package.json  server.js  tsconfig.json  tsconfig.node.json  vite.config.ts
web/declarations/: biomodule.d.ts  index.d.ts
web/html/: example.html
web/src/: AminoAcidData.ts  App.css  App.tsx  ProteinView.css  ProteinView.tsx  SequenceInput.css  SequenceInput.tsx  Skeletal.tsx  colors.css  index.css  main.tsx  variables.css
web/src/components/: AminoAcidView.css  AminoAcidView.tsx  OpenReadingFrame.tsx  Orf.tsx  ProteinInfo.css  ProteinInfo.tsx  SequenceInput.css  SequenceInput.tsx
web/src/react_components/SkeletalFormula/: SkeletalFormula.tsx
